<resources>
    <string name="app_name">TestAutomationWorkshop</string>
    <string name="login_screen">Login Screen</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="do_login">Do login</string>
    <string name="forgot_your_password">Forgot your password?</string>
</resources>
